Address whitespace issues
The code change addresses issues related to whitespace.

--- a/src/index.css
+++ b/src/index.css
@@ -48,9 +48,15 @@
 
   * {
     @apply border-border;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
   }
 
-  html {
+  html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
   }
